--- a/transcriptsummerizer/src/hello.html
+++ b/transcriptsummerizer/src/hello.html
@@ -29,7 +29,7 @@
             transition: background-color 0.3s ease;
         }
 
-        /* We want to change the color of the button when it is hovered */
+        /* ACTIVITY 2; We want to change the color of the button when it is hovered */
         #clickactivity:hover {
             
         }
