--- a/transcriptsummerizer/src/hello.html
+++ b/transcriptsummerizer/src/hello.html
@@ -19,11 +19,11 @@
 <body>
     <!--ACTIVITY #1-->
     <div class="popup-container">
-        <!-- Create a HTML button with id="clickactivity" -->
-        <!-- Create a div  with id="dataDisplay". We will use this to display our
-                output -->
+        <button id="clickactivity">Run</button>
+        <div id="dataDisplay"></div>
     </div>
     <!-- Create a script tag with "src="popup.js" -->
+    <script src="popup.js"></script>
 </body>
 
 </html>
